tests/programs/a1/local/invalid/assignment_operations.java
public class assignment_operations {
  public void m(int x) {
    x+=42;
    x-=42;
    x*=42;
    x/=42;
    x%=42;
    x|=42;
    x&=42;
    x^=42;
    x<<=42;
    x>>=42;
    x>>>=42;
  }
}